MDL-47494 gapselect: Fix for minor css issue for wip#372

--- a/question/type/gapselect/styles.css
+++ b/question/type/gapselect/styles.css
@@ -16,7 +16,7 @@
 }
 
 .que.gapselect .group1 {
-    background-color: #FFFFFF;
+    background-color: #E4F1FA;
 }
 .que.gapselect .group2 {
     background-color: #DCDCDC;
